# scorpio_navigation2

./: .gitmodules  CONTRIBUTING.md  README.md
.github/workflows/: build_and_test.yml
loam_interface/: README.md  package.xml
loam_interface/include/loam_interface/: loam_interface.hpp
loam_interface/launch/: loam_interface_launch.py
loam_interface/src/: loam_interface.cpp
scorpio_nav2_bringup/: CMakeLists.txt  package.xml
scorpio_nav2_bringup/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  scorpio_gz_sim_launch.py  scorpio_loopback_sim_launch.py  scorpio_real_launch.py  slam_launch.py
scorpio_nav2_bringup/maps/: turtlebot3_dqn.pgm  turtlebot3_dqn.yaml  turtlebot3_house.pgm  turtlebot3_house.yaml  warehouse.pgm  warehouse.yaml
scorpio_nav2_bringup/params/: lattice.json  neupan_scorpio_20260402.pth
scorpio_nav2_bringup/params/behavior_trees/: nav_to_pose_with_consistent_replanning_and_if_path_becomes_invalid.xml  navigate_through_poses_w_replanning_and_recovery.xml
scorpio_nav2_bringup/params/reality/: nav_params.yaml  slam_3d_params.yaml
scorpio_nav2_bringup/params/simulation/: lio_3d_params.yaml  nav_params.yaml  planner.yaml
scorpio_nav2_bringup/rviz/: lio_3d.rviz  nav2_default_view.rviz  slam_3d.rviz  video_demo.rviz
scorpio_nav2_plugin/: CMakeLists.txt  README.md  behavior_plugin.xml  costmap_plugins.xml  package.xml
scorpio_nav2_plugin/src/behaviors/: back_up_free_space.cpp
scorpio_nav2_plugin/src/layers/: intensity_voxel_layer.cpp
scorpio_navigation2/: CMakeLists.txt  package.xml
(+2 files in other folders)
