<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scorpio_nav2_bringup</name>
  <version>0.0.1</version>
  <description>Bringup scripts and configurations for the navigation</description>
  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_loopback_sim</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>nav2_neupan_controller</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>
  <exec_depend>scorpio_navigation</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_black</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
